--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 
 	<link href="estilos.css" rel="stylesheet" type="text/css" />
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	<!-- jQuery y popper(necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 		crossorigin="anonymous"></script>
 
+	<!-- Archivos de bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+		crossorigin="anonymous"></script>
 	<!-- Anuncios automáticos de google -->
-	<script data-ad-client="ca-pub-3818527025423610" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script data-ad-client="ca-pub-3818527025423610" async
+		src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 
@@ -184,16 +183,9 @@
 			<p>
 				<span id="w3cXHTML">
 					<a href="https://validator.w3.org/check?uri=referer"><img style="border:0;"
-							src="https://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1" height="31"
-							width="88" /></a>
+							src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg" alt="Valid XHTML 1.1"
+							height="31" width="88" /></a>
 				</span>
-				<span id="w3cCSS"><a href="https://jigsaw.w3.org/css-validator/check/referer">
-						<img style="border:0;width:88px;height:31px"
-							src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="¡CSS Válido!" /></a>
-				</span>
-				<span><img
-						src="http://www.tawdis.net/system/modules/org.fundacionctic.taw/resources/img/imagenesTaw/taw_1_AAA.png"
-						alt="Accesible de tipo AAA" /></span>
 				<span><a href="https://www.phoneixs.es"><img src="images/phoneixs.png" width="54" height="54"
 							alt="www.phoneixs.es" /></a></span></p>
 
