--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 			<div id="Noticias">
 				<h2>Noticias</h2>
 				<div class="noticia">
+					<p><span class="fechaNoticia">(19-06-2020 14:39)</span> <span class="noticia">Nuevo hosting del sitio web.</span></p>
+				</div>
+				<div class="noticia">
 					<p><span class="fechaNoticia">(22-08-2019 16:10)</span> <span class="noticia">Añadido un nuevo texto
 							a los <a href="textos/index.html">textos extraños</a>, <a
 								href="textos/index.html#t20190822_1">Cielo rojo</a>.</span></p>
