Added google analytics new tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 	<meta name="author" content="Javier Alfonso Bellota de Frutos" />
 	<meta name="language" content="es" />
 	<meta name="wot-verification" content="4429030ec9d07aa82656" />
+	
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23672634-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-23672634-1');
+        </script>
+
 
 	<link href="estilos.css" rel="stylesheet" type="text/css" />
 
