--- a/AlternativasLibres.html
+++ b/AlternativasLibres.html
@@ -3,6 +3,17 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
   <title>Alternativas de software libre o gratuitas</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23672634-1"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-23672634-1');
+</script>
+
   <link href="estilos.css" rel="stylesheet" type="text/css" />
   <meta name="description" content="Página con una lista de alternativas gratuitas o libres a programas de pago." />
   <meta name="keywords" content="PhoneixS,software,gratuito,libre,alternativas" />
