--- a/panoramicas/index.html
+++ b/panoramicas/index.html
@@ -3,6 +3,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>PhoneixS - Panorámicas</title>
+
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23672634-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-23672634-1');
+	</script>
+	
 	<link href="../estilos.css" rel="stylesheet" type="text/css" />
 	<style>
 		.panoramica {
