--- a/textos/index.html
+++ b/textos/index.html
@@ -11,6 +11,16 @@
 	<meta name="copyright" content="Julio 2009" />
 	<title>Textos extraños de PhoneixS</title>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23672634-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-23672634-1');
+	</script>
+
 	<style type="text/css">
 <!--
 h1 {
